# cpp-AeroInvaders

./: CMakeLists.txt  README.md
src/: controller.cpp  main.cpp  renderer.cpp
src/headers/: controller.h  renderer.h
src/infra_classes/: bitmap_loop.cpp  bitmap_sprite.cpp  enemy_sprite.cpp  missle_sprite.cpp  player_sprite.cpp  rcolor.cpp  rect_sprite.cpp
src/infra_classes/headers/: bitmap_loop.hpp  bitmap_sprite.hpp  enemy_sprite.hpp  intersect.hpp  missle_sprite.hpp  movable.hpp  player_sprite.hpp  rcolor.hpp  rect_sprite.hpp  sprite.hpp  sprite2d.hpp
src/managers/: enemy_manager.cpp  enemy_manager.hpp  game_manager.cpp  game_manager.hpp  player_manager.cpp  player_manager.hpp
